--- a/requirements.txt
+++ b/requirements.txt
@@ -10,17 +10,20 @@ constantly==23.10.4
 cryptography==41.0.5
 daphne==4.0.0
 Django==4.2.7
+djangorestframework==3.14.0
 gunicorn==21.2.0
 hyperlink==21.0.0
 idna==3.5
 incremental==22.10.0
 msgpack==1.0.7
 packaging==23.2
+Pillow==10.1.0
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
 pyOpenSSL==23.3.0
 python-dotenv==1.0.0
+pytz==2023.3.post1
 redis==5.0.1
 service-identity==23.1.0
 six==1.16.0
