--- a/requirements.txt
+++ b/requirements.txt
@@ -15,13 +15,18 @@ gunicorn==21.2.0
 hyperlink==21.0.0
 idna==3.5
 incremental==22.10.0
+iniconfig==2.0.0
 msgpack==1.0.7
 packaging==23.2
 Pillow==10.1.0
+pluggy==1.3.0
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
 pyOpenSSL==23.3.0
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-django==4.7.0
 python-dotenv==1.0.0
 pytz==2023.3.post1
 redis==5.0.1
