--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,35 @@
+aiohttp==3.9.1
+aiosignal==1.3.1
+anyio==4.1.0
 asgiref==3.7.2
 async-timeout==4.0.3
 attrs==23.1.0
 autobahn==23.6.2
 Automat==22.10.0
+certifi==2023.11.17
 cffi==1.16.0
 channels==4.0.0
 channels-redis==4.1.0
+charset-normalizer==3.3.2
 constantly==23.10.4
 cryptography==41.0.5
 daphne==4.0.0
 Django==4.2.7
+django-redis==5.4.0
 djangorestframework==3.14.0
+Faker==12.0.1
+frozenlist==1.4.0
 gunicorn==21.2.0
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.25.2
 hyperlink==21.0.0
 idna==3.5
 incremental==22.10.0
 iniconfig==2.0.0
+mixer==7.2.2
 msgpack==1.0.7
+multidict==6.0.4
 packaging==23.2
 Pillow==10.1.0
 pluggy==1.3.0
@@ -27,13 +40,19 @@ pyOpenSSL==23.3.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-django==4.7.0
+pytest-mock==3.12.0
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
 redis==5.0.1
+requests==2.31.0
 service-identity==23.1.0
 six==1.16.0
+sniffio==1.3.0
 sqlparse==0.4.4
 Twisted==23.10.0
 txaio==23.1.1
 typing_extensions==4.8.0
+urllib3==2.1.0
+yarl==1.9.3
 zope.interface==6.1
